WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212154
RenderObject::VisibleRectContext members should not be prefixed with m_
https://bugs.webkit.org/show_bug.cgi?id=212154
Summary
RenderObject::VisibleRectContext members should not be prefixed with m_
alan
Reported
2020-05-20 11:09:50 PDT
ssia
Attachments
Patch
(13.16 KB, patch)
2020-05-20 11:10 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-05-20 11:10:43 PDT
Created
attachment 399858
[details]
Patch
EWS
Comment 2
2020-05-20 12:59:56 PDT
Committed
r261941
: <
https://trac.webkit.org/changeset/261941
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399858
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-05-20 13:00:18 PDT
<
rdar://problem/63460069
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug