RenderObject::VisibleRectContext members should not be prefixed with m_ https://bugs.webkit.org/show_bug.cgi?id=212154

Reviewed by Simon Fraser.

* rendering/RenderBox.cpp:
(WebCore::RenderBox::applyCachedClipAndScrollPosition const):
(WebCore::RenderBox::computeVisibleRectInContainer const):
* rendering/RenderInline.cpp:
(WebCore::RenderInline::computeVisibleRectInContainer const):
* rendering/RenderObject.cpp:
(WebCore::RenderObject::computeVisibleRectInContainer const):
* rendering/RenderObject.h:
* rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::computeVisibleRectInContainer const):
* rendering/RenderView.cpp:
(WebCore::RenderView::computeVisibleRectInContainer const):
* rendering/svg/RenderSVGRoot.cpp:
(WebCore::RenderSVGRoot::computeFloatVisibleRectInContainer const):


Canonical link: https://commits.webkit.org/225027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261941 268f45cc-cd09-0410-ab3c-d52691b4dbfc